# ShiftAssistant

./: .gitignore  .replit  Dockerfile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml  replit.md  replit_auth.py  repository.yaml  requirements.txt  routes.py
attached_assets/: Pasted-2026-01-04-23-12-06-255-INFO-MainThread-supervisor-stor_1767564846347.txt  Pasted-2026-01-04-23-17-10-336-ERROR-MainThread-supervisor-add_1767565094984.txt
hassio-addon/: README.md  repository.json
hassio-addon/workshift-calendar/: CHANGELOG.md  Dockerfile  app.py  build.yaml  config.yaml  routes.py  run.sh  settings.html  settings.js
hassio-addon/workshift-calendar/static/css/: style.css
hassio-addon/workshift-calendar/static/js/: settings.js
hassio-addon/workshift-calendar/templates/: 404.html
hassio-addon/workshift-calendar/translations/: en.yaml
static/css/: style.css
static/js/: calendar.js  settings.js  templates.js
templates/: base.html  dashboard.html  landing.html  login.html  register.html  settings.html  templates.html
workshift-calendar/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  app.py  build.yaml  config.yaml  local_auth.py  main.py  models.py  routes.py  run.sh
workshift-calendar/rootfs/etc/services.d/workshift/: finish  run
workshift-calendar/static/css/: style.css
workshift-calendar/static/js/: calendar.js  settings.js  templates.js
workshift-calendar/templates/: 403.html  base.html  dashboard.html  landing.html  login.html  register.html  settings.html  templates.html
workshift-calendar/translations/: en.yaml
