[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.2",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
    "werkzeug>=3.1.4",
]
